Update gallery layout and add clear fix for footer spacing

--- a/style.css
+++ b/style.css
@@ -56,7 +56,11 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 1rem;
+   
       }
+
+.clear { clear: both; height: 8rem; }
+
 i {
     font-size: 1.6rem;
 }
